--- a/app/views/layouts/rinfo/application.html.slim
+++ b/app/views/layouts/rinfo/application.html.slim
@@ -5,6 +5,8 @@ html
     meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'
     meta name='format-detection' content='telephone=no'
     title = yield(:title)
+    = csrf_meta_tags
+    = csp_meta_tag
     = stylesheet_link_tag 'rinfo/application', media: 'all'
     = javascript_include_tag 'rinfo/application'
   body
